cargo-features = ["edition2021"]

[package]
name = "rye"
version = "0.1.0"
authors = ["Jeremy Paige <ucodery@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode_categories = "0.1.1"
unicode-normalization = "0.1.19"

[dev-dependencies]
rstest = "0.11.0"
#inline-python = "0.7.1"
